<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InCloud</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty"></string>
    <string name="setting">设置</string>
    <string name="yixin">注册空调</string>
    <string name="friend">查找空调</string>
    <string name="group">监控</string>
    <string name="nearby">客厅</string>
    <string name="listview">场景</string>
    <string name="times">定时</string>
    <string name="app_about">关于</string>
    <string name="user_name">请输入账号</string>
    <string name="area_name">请输入房间名</string>
     <string name="name">名称</string>
      <string name="time">时间</string>
     <string name="logo">Logo</string>
     <string name="add">添加</string>
       <string name="areas_set">房间设置</string>
       <string name="change_user_title">切换账号</string>
       <string name="updata_user_title">修改密码</string>
       <string name="backup_title">备份</string>
        <string name="play_title">播放</string>
        <string name="screen_title">监控</string>
         <string name="vedio_title">00:00:00</string>
       <string name="ok_title">确定</string>
       <string name="edit_title">编辑</string>
       <string name="times_title">设置定时</string>
       <string name="sence_title">场景设置</string>
       <string name="getcodestr">重试</string>
   
</resources>
