<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

  <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="55dip"
    android:gravity="center_vertical"
    android:padding="0.0px" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/comm_title_bg" />

    <TextView
        style="@style/A1_Font"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="96.0dip"
        android:paddingRight="96.0dip"
         android:textSize="25dp"
        android:singleLine="true"
        android:text="@string/areas_set" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="43dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dip"
        android:layout_centerVertical="true"
        android:background="@drawable/back_selector"
        android:gravity="center"
        android:includeFontPadding="false" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="68dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ok_selector"
        android:text="@string/ok_title"
        android:gravity="center"
        android:layout_marginRight="5dip"
        android:includeFontPadding="false" />

</RelativeLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="65.0dip"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/tool_box_fragment_bg_selector"
      android:gravity="center_vertical|center_horizontal"
      android:orientation="horizontal" >

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/name"
            android:layout_marginLeft="15dp"
          android:textColor="@color/black"
          android:textSize="23dp" />

          <EditText
                    android:id="@+id/area_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:background="@null"
                     android:layout_marginLeft="15dp"
                      android:textSize="23dp" 
                    android:hint="@string/area_name" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

   <ListView
       android:id="@+id/adlist"
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:layout_margin="5dp"
       android:divider="@null"
       android:scrollingCache="false" />

  </LinearLayout>

</LinearLayout>
