<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

  <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="55dip"
    android:gravity="center_vertical"
    android:padding="0.0px" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/comm_title_bg" />

    <TextView
        style="@style/A1_Font"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="96.0dip"
        android:paddingRight="96.0dip"
         android:textSize="25dp"
        android:singleLine="true"
        android:text="@string/times_title" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="43dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dip"
        android:layout_centerVertical="true"
        android:background="@drawable/back_selector"
        android:gravity="center"
        android:includeFontPadding="false" />

</RelativeLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="65.0dip"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/tool_box_fragment_bg_selector"
      android:gravity="center_vertical|center_horizontal"
      android:orientation="horizontal" >

  <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/name"
            android:layout_marginLeft="15dp"
          android:textColor="@color/black"
          android:textSize="23dp" />

          <EditText
                    android:id="@+id/times_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:background="@null"
                     android:layout_marginLeft="15dp"
                      android:textSize="23dp" 
            />
  </LinearLayout>

 
 <LinearLayout
      android:id="@+id/time_dev"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:orientation="vertical" >

  </LinearLayout>
<LinearLayout
      android:id="@+id/time_date"
      android:layout_width="fill_parent"
      android:layout_height="150dp"
      android:layout_gravity="top"
      
      android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
          android:background="@drawable/tool_box_fragment_bg_selector"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/general_time_icon" />

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text=""
            android:textColor="@color/black"
            android:textSize="23dp" />

        <Button
            android:id="@+id/pick_bt"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/general_time_select_pull_down_arrows_normal"
            android:onClick="buttonClick"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical"
          android:background="@drawable/tool_box_fragment_bg_selector"
        android:gravity="center_vertical|center_horizontal" >

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_add_button_normal" />
         <ImageView
            android:id="@+id/iv_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/general_del_button_normal" />
    </LinearLayout>

  </LinearLayout>
  <LinearLayout
      android:id="@+id/time_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="horizontal" >

  </LinearLayout>

</LinearLayout>
